# 3-Day-Agent

./: .gitignore  README.md  agent.py  cli.py  code-readme.md  kb_manager.py  memory_manager.py  pyproject.toml  reranker.py  retriever.py  start.bat  start.py  streamlit_app.py  test_agent.py  tools.py  utils_web.py  vector_store.py  任务.md
.deepseek/: instructions.md
pages/: admin.py  chat.py  history.py  kb.py  memory.py
src/core/: agent.py  error_handler.py
src/multi_agent/: agent_adapters.py  agents.py  message_bus.py  multi_agent_graph.py  multi_agent_state.py  supervisor.py
src/tools/: document_loader.py  kb_manager.py  retriever.py  tools.py  vector_store.py
src/ui/: cli.py  streamlit_app.py  utils_web.py
理论学习文档/: 写在前面.md  总体方案.md
理论学习文档/第1周/: 基础认知与环境搭建.md  核心组件.md  第一周：详细任务清单.md
理论学习文档/第2周/: 模块一：精准控制模型 —— `ChatModel` 的关键参数与行为.md  模块三：从文本到结构化数据 —— `PydanticOutputParser` 核心实战.md  模块二：构建动态对话 —— `ChatPromptTemplate` 进阶技巧.md  模块四：综合应用与笔记产出.md  第二周主题：核心组件深度掌握.md
理论学习文档/第3周/: 模块一：一切皆是 Runnable .md  模块三：打通 Python 函数的经脉 —— `RunnableLambda`.md  模块二：数据流的魔术师 —— `RunnablePassthrough` 与 `RunnableParallel`.md  模块四：链中的十字路口 —— `RunnableBranch` 与 `.bind()` 参数配置.md  第三周学习笔记摘要.md
理论学习文档/第4周/: 模块1：RAG 概览 & 文档加载.md  模块2：文档分割 & 向量存储.md  模块3：构建检索问答链（LCEL）.md  模块4：调试与优化.md  第四周学习笔记摘要.md
理论学习文档/第5周/: 模块1：Agent 与 ReAct 范式入门.md  模块2：打造 Agent 的“工具箱”.md  模块3：组装 Agent 并可视化推理过程（LangGraph 重制版）.md  模块4：为 Agent 注入记忆（预览）.md  第五周学习笔记摘要.md
理论学习文档/第6周/: 模块1：记忆类型基础与对比.md  模块2：用 RunnableWithMessageHistory 改造 Age.md  模块3：进阶记忆策略——摘要记忆实战.md  综合拓展：RAG + Memory 融合设计思路.md
(+6 files in other folders)
